# PROJECT-FLOORPLAN

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
docs/completed/: roadmap.md
docs/planning/: 24MAR2026-ci-pipeline.md  25MAR2026-phase-1-ranging.md  25MAR2026-phase-3-4-passive-tracking.md
docs/review/: 24MAR2026-ci-pipeline-review.md  25MAR2026-phase-1-review.md  25MAR2026-phase-2-review.md  25MAR2026-phase-3-4-review.md
examples/: site.yml
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DevicePanel.tsx  FloorPlanView.tsx
frontend/src/hooks/: useWebSocket.ts
src/floorplan/: __init__.py  models.py
src/floorplan/cli/: __init__.py  main.py
src/floorplan/config/: __init__.py  loader.py  models.py
src/floorplan/db/: __init__.py  store.py
src/floorplan/passive/: __init__.py  ftm_capture.py  monitor.py  probe_tracker.py
src/floorplan/position/: __init__.py  engine.py  kalman.py  particle.py  trilateration.py
src/floorplan/ranging/: __init__.py  calibration.py  engine.py  nl80211.py  nlos.py  simulator.py
src/floorplan/tracking/: __init__.py  device.py  fingerprint.py  manager.py
src/floorplan/web/: __init__.py  app.py  routes.py  ws.py
tests/test_position/: test_kalman.py  test_particle.py  test_trilateration.py
tests/test_ranging/: test_calibration.py  test_engine.py  test_integration.py  test_nl80211.py  test_nlos.py
tests/test_tracking/: test_fingerprint.py  test_manager.py
